--- a/hrms/hrms.csproj
+++ b/hrms/hrms.csproj
@@ -61,6 +61,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add Staff\addStaff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add Staff\addStaff.Designer.cs">
+      <DependentUpon>addStaff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add Staff\adminstaff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add Staff\adminstaff.Designer.cs">
+      <DependentUpon>adminstaff.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,9 +85,51 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManStaff\adminchange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManStaff\adminchange.Designer.cs">
+      <DependentUpon>adminchange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManStaff\pwdchange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManStaff\pwdchange.Designer.cs">
+      <DependentUpon>pwdchange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Mob Staff\MobStaff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mob Staff\MobStaff.Designer.cs">
+      <DependentUpon>MobStaff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NoticeMan\Noticeman.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoticeMan\Noticeman.Designer.cs">
+      <DependentUpon>Noticeman.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NoticeMan\Noticepub.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoticeMan\Noticepub.Designer.cs">
+      <DependentUpon>Noticepub.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RewardPStaff\RewardPStaff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RewardPStaff\RewardPStaff.Designer.cs">
+      <DependentUpon>RewardPStaff.cs</DependentUpon>
+    </Compile>
     <Compile Include="system class\DB.cs" />
+    <EmbeddedResource Include="Add Staff\addStaff.resx">
+      <DependentUpon>addStaff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add Staff\adminstaff.resx">
+      <DependentUpon>adminstaff.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
