完成用户管理，管理公告>发布公告功能。

--- a/hrms/hrms.csproj
+++ b/hrms/hrms.csproj
@@ -149,8 +149,14 @@
     <EmbeddedResource Include="ManStaff\adminchange.resx">
       <DependentUpon>adminchange.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ManStaff\pwdchange.resx">
+      <DependentUpon>pwdchange.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mob Staff\MobStaff.resx">
       <DependentUpon>MobStaff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoticeMan\Noticepub.resx">
+      <DependentUpon>Noticepub.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -193,6 +199,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="res\icon\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
