--- a/hrms/App.config
+++ b/hrms/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="hrms.Properties.Settings.ConnectionString" connectionString="Provider=SQLNCLI11;Data Source=.;Password=123456;User ID=sa;Initial Catalog=hrms"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
